sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:8: error: '(' expected but identifier found.
      if plusPetit(i+j,i){
         ^AlgBubbleSort1:11: error: illegal start of simple expression
    }
    ^